cabal-version: 3.8
name: reactor
version: 0.1.0.0
synopsis: Reactor language
description: Reactor is a LISP-inspired language.
license: BSD-3-Clause
author: ReactHome Team
maintainer: gazdovsky@gmail.com
category: language
build-type: Simple

library
  hs-source-dirs: src
  -- cabal-gild: discover src
  exposed-modules:
    Reactor
    Reactor.AST
    Reactor.Env
    Reactor.Error
    Reactor.Eval
    Reactor.Eval.Error
    Reactor.IR
    Reactor.Lib
    Reactor.Lib.Bool
    Reactor.Lib.Bool.Eq
    Reactor.Lib.Bool.Ge
    Reactor.Lib.Bool.Gt
    Reactor.Lib.Bool.If
    Reactor.Lib.Bool.Le
    Reactor.Lib.Bool.Lt
    Reactor.Lib.Bool.Ne
    Reactor.Lib.Bool.Not
    Reactor.Lib.Bool.Until
    Reactor.Lib.Bool.When
    Reactor.Lib.Bool.While
    Reactor.Lib.Builtin
    Reactor.Lib.Builtin.Def
    Reactor.Lib.Builtin.Lambda
    Reactor.Lib.Builtin.List
    Reactor.Lib.Builtin.Quote
    Reactor.Lib.Builtin.Set
    Reactor.Lib.Math.Trigonometric.Acos
    Reactor.Lib.Math.Trigonometric.Asin
    Reactor.Lib.Math.Trigonometric.Atan
    Reactor.Lib.Math.Trigonometric.Cos
    Reactor.Lib.Math.Trigonometric.Sin
    Reactor.Lib.Math.Trigonometric.Tan
    Reactor.Lib.Math.Utility.Abs
    Reactor.Lib.Math.Utility.Ceil
    Reactor.Lib.Math.Utility.Exp
    Reactor.Lib.Math.Utility.Floor
    Reactor.Lib.Math.Utility.Log
    Reactor.Lib.Math.Utility.Min
    Reactor.Lib.Math.Utility.Pow
    Reactor.Lib.Math.Utility.Sqrt
    Reactor.Parser
    Reactor.Parser.Error
    Spec.Device

  build-depends:
    base,
    bytestring,
    containers,
    megaparsec,
    scientific,
    text,
    transformers,

  default-language: GHC2024
  default-extensions:
    BlockArguments
    DefaultSignatures
    DuplicateRecordFields
    OverloadedRecordDot
    OverloadedStrings
    RecordWildCards

test-suite reactor-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  -- cabal-gild: discover test --exclude=*/Spec.hs
  other-modules:
    Reactor.CompileSpec
    Reactor.EnvSpec
    Reactor.EvalSpec
    Reactor.Lib.Bool.EqSpec
    Reactor.Lib.Bool.GeSpec
    Reactor.Lib.Bool.GtSpec
    Reactor.Lib.Bool.IfSpec
    Reactor.Lib.Bool.LeSpec
    Reactor.Lib.Bool.LtSpec
    Reactor.Lib.Bool.NeSpec
    Reactor.Lib.Bool.NotSpec
    Reactor.Lib.Bool.UntilSpec
    Reactor.Lib.Bool.WhenSpec
    Reactor.Lib.Bool.WhileSpec
    Reactor.Lib.Builtin.ClosureSpec
    Reactor.Lib.Builtin.DefSpec
    Reactor.Lib.Builtin.LambdaSpec
    Reactor.Lib.Builtin.ListSpec
    Reactor.Lib.Builtin.QuoteSpec
    Reactor.Lib.Builtin.SetSpec
    Reactor.Lib.Math.Trigonometric.AcosSpec
    Reactor.Lib.Math.Trigonometric.AsinSpec
    Reactor.Lib.Math.Trigonometric.AtanSpec
    Reactor.Lib.Math.Trigonometric.CosSpec
    Reactor.Lib.Math.Trigonometric.SinSpec
    Reactor.Lib.Math.Trigonometric.TanSpec
    Reactor.Lib.Math.Utility.AbsSpec
    Reactor.Lib.Math.Utility.CeilSpec
    Reactor.Lib.Math.Utility.ExpSpec
    Reactor.Lib.Math.Utility.FloorSpec
    Reactor.Lib.Math.Utility.LogSpec
    Reactor.Lib.Math.Utility.MinSpec
    Reactor.Lib.Math.Utility.PowSpec
    Reactor.Lib.Math.Utility.SqrtSpec
    Reactor.ParserSpec
    Reactor.TestUtils

  main-is: Spec.hs
  build-depends:
    QuickCheck,
    base,
    containers,
    hspec,
    quickcheck-instances,
    reactor,
    scientific,
    text,

  build-tool-depends: hspec-discover:hspec-discover
  default-language: GHC2024
  default-extensions:
    BlockArguments
    DefaultSignatures
    DuplicateRecordFields
    OverloadedRecordDot
    OverloadedStrings
    RecordWildCards

executable reactor
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
    base,
    reactor,
    text,

  default-language: GHC2024
  default-extensions:
    BlockArguments
    DuplicateRecordFields
    OverloadedRecordDot
    OverloadedStrings
    RecordWildCards
