cabal-version: 3.8
name: reactor
version: 0.1.0.0
synopsis: Reactor language
description: Reactor is a LISP-inspired language.
license: BSD-3-Clause
author: ReactHome Team
maintainer: gazdovsky@gmail.com
category: language
build-type: Simple

library
  hs-source-dirs: src
  -- cabal-gild: discover src
  exposed-modules:
    Reactor
    Reactor.AST
    Reactor.Env
    Reactor.Error
    Reactor.Eval
    Reactor.Eval.Error
    Reactor.IR
    Reactor.Lib
    Reactor.Lib.Bool
    Reactor.Lib.Bool.Eq
    Reactor.Lib.Bool.Ge
    Reactor.Lib.Bool.Gt
    Reactor.Lib.Bool.If
    Reactor.Lib.Bool.Le
    Reactor.Lib.Bool.Lt
    Reactor.Lib.Bool.Ne
    Reactor.Lib.Bool.Not
    Reactor.Lib.Bool.Until
    Reactor.Lib.Bool.When
    Reactor.Lib.Bool.While
    Reactor.Lib.Builtin
    Reactor.Lib.Builtin.Def
    Reactor.Lib.Builtin.Lambda
    Reactor.Lib.Builtin.List
    Reactor.Lib.Builtin.Object
    Reactor.Lib.Builtin.Quote
    Reactor.Lib.Builtin.Set
    Reactor.Lib.List
    Reactor.Lib.List.Append
    Reactor.Lib.List.Butlast
    Reactor.Lib.List.Car
    Reactor.Lib.List.Cdr
    Reactor.Lib.List.Cons
    Reactor.Lib.List.Drop
    Reactor.Lib.List.Filter
    Reactor.Lib.List.Find
    Reactor.Lib.List.Flatten
    Reactor.Lib.List.Last
    Reactor.Lib.List.Length
    Reactor.Lib.List.Map
    Reactor.Lib.List.Member
    Reactor.Lib.List.Nth
    Reactor.Lib.List.Partition
    Reactor.Lib.List.Position
    Reactor.Lib.List.Remove
    Reactor.Lib.List.Reverse
    Reactor.Lib.List.Take
    Reactor.Lib.List.Zip
    Reactor.Lib.Math
    Reactor.Lib.Math.Arithmetic
    Reactor.Lib.Math.Arithmetic.Add
    Reactor.Lib.Math.Arithmetic.Div
    Reactor.Lib.Math.Arithmetic.Mod
    Reactor.Lib.Math.Arithmetic.Mul
    Reactor.Lib.Math.Arithmetic.Sub
    Reactor.Lib.Math.Const
    Reactor.Lib.Math.Logarithmic
    Reactor.Lib.Math.Logarithmic.Lg
    Reactor.Lib.Math.Logarithmic.Ln
    Reactor.Lib.Math.Logarithmic.Log
    Reactor.Lib.Math.Power
    Reactor.Lib.Math.Power.Exp
    Reactor.Lib.Math.Power.Pow
    Reactor.Lib.Math.Power.Sqrt
    Reactor.Lib.Math.Trigonometric
    Reactor.Lib.Math.Trigonometric.Acos
    Reactor.Lib.Math.Trigonometric.Asin
    Reactor.Lib.Math.Trigonometric.Atan
    Reactor.Lib.Math.Trigonometric.Cos
    Reactor.Lib.Math.Trigonometric.Sin
    Reactor.Lib.Math.Trigonometric.Tan
    Reactor.Lib.Math.Utility
    Reactor.Lib.Math.Utility.Abs
    Reactor.Lib.Math.Utility.Ceil
    Reactor.Lib.Math.Utility.Floor
    Reactor.Lib.Math.Utility.Max
    Reactor.Lib.Math.Utility.Min
    Reactor.Lib.Math.Utility.Round
    Reactor.Lib.Math.Utility.Trunc
    Reactor.Parser
    Reactor.Parser.Error
    Spec.Device

  build-depends:
    base,
    bytestring,
    containers,
    megaparsec,
    scientific,
    text,
    transformers,

  default-language: GHC2024
  default-extensions:
    BlockArguments
    DefaultSignatures
    DuplicateRecordFields
    OverloadedRecordDot
    OverloadedStrings
    RecordWildCards

test-suite reactor-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  -- cabal-gild: discover test --exclude=*/Spec.hs
  other-modules:
    Reactor.CompileSpec
    Reactor.EnvSpec
    Reactor.ErrorContextSpec
    Reactor.EvalSpec
    Reactor.Lib.Bool.EqSpec
    Reactor.Lib.Bool.GeSpec
    Reactor.Lib.Bool.GtSpec
    Reactor.Lib.Bool.IfSpec
    Reactor.Lib.Bool.LeSpec
    Reactor.Lib.Bool.LtSpec
    Reactor.Lib.Bool.NeSpec
    Reactor.Lib.Bool.NotSpec
    Reactor.Lib.Bool.UntilSpec
    Reactor.Lib.Bool.WhenSpec
    Reactor.Lib.Bool.WhileSpec
    Reactor.Lib.Builtin.ClosureSpec
    Reactor.Lib.Builtin.DefSpec
    Reactor.Lib.Builtin.LambdaSpec
    Reactor.Lib.Builtin.ListSpec
    Reactor.Lib.Builtin.QuoteSpec
    Reactor.Lib.Builtin.SetSpec
    Reactor.Lib.List.AppendSpec
    Reactor.Lib.List.ButlastSpec
    Reactor.Lib.List.CarSpec
    Reactor.Lib.List.CdrSpec
    Reactor.Lib.List.ConsSpec
    Reactor.Lib.List.DropSpec
    Reactor.Lib.List.FilterSpec
    Reactor.Lib.List.FindSpec
    Reactor.Lib.List.FlattenSpec
    Reactor.Lib.List.LastSpec
    Reactor.Lib.List.LengthSpec
    Reactor.Lib.List.MapSpec
    Reactor.Lib.List.MemberSpec
    Reactor.Lib.List.NthSpec
    Reactor.Lib.List.PartitionSpec
    Reactor.Lib.List.PositionSpec
    Reactor.Lib.List.RemoveSpec
    Reactor.Lib.List.ReverseSpec
    Reactor.Lib.List.TakeSpec
    Reactor.Lib.List.ZipSpec
    Reactor.Lib.Math.Arithmetic.AddSpec
    Reactor.Lib.Math.Arithmetic.DivSpec
    Reactor.Lib.Math.Arithmetic.ModSpec
    Reactor.Lib.Math.Arithmetic.MulSpec
    Reactor.Lib.Math.Arithmetic.SubSpec
    Reactor.Lib.Math.Logarithmic.LgSpec
    Reactor.Lib.Math.Logarithmic.LnSpec
    Reactor.Lib.Math.Logarithmic.LogSpec
    Reactor.Lib.Math.Power.ExpSpec
    Reactor.Lib.Math.Power.PowSpec
    Reactor.Lib.Math.Power.SqrtSpec
    Reactor.Lib.Math.Trigonometric.AcosSpec
    Reactor.Lib.Math.Trigonometric.AsinSpec
    Reactor.Lib.Math.Trigonometric.AtanSpec
    Reactor.Lib.Math.Trigonometric.CosSpec
    Reactor.Lib.Math.Trigonometric.SinSpec
    Reactor.Lib.Math.Trigonometric.TanSpec
    Reactor.Lib.Math.Utility.AbsSpec
    Reactor.Lib.Math.Utility.CeilSpec
    Reactor.Lib.Math.Utility.FloorSpec
    Reactor.Lib.Math.Utility.MaxSpec
    Reactor.Lib.Math.Utility.MinSpec
    Reactor.Lib.Math.Utility.RoundSpec
    Reactor.Lib.Math.Utility.TruncSpec
    Reactor.ParserSpec
    Reactor.TestUtils

  main-is: Spec.hs
  build-depends:
    QuickCheck,
    base,
    containers,
    hspec,
    quickcheck-instances,
    reactor,
    scientific,
    text,

  build-tool-depends: hspec-discover:hspec-discover
  default-language: GHC2024
  default-extensions:
    BlockArguments
    DefaultSignatures
    DuplicateRecordFields
    OverloadedRecordDot
    OverloadedStrings
    RecordWildCards

executable reactor
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
    base,
    reactor,
    text,

  default-language: GHC2024
  default-extensions:
    BlockArguments
    DuplicateRecordFields
    OverloadedRecordDot
    OverloadedStrings
    RecordWildCards
