cabal-version: 3.8
name: reacthome-relay
version: 0.1.0.0
synopsis: Reacthome Relay
description: Cloud relay for Reacthome applications galaxy
license: BSD-3-Clause
author: ReactHome Team
maintainer: gazdovsky@gmail.com
category: Web
build-type: Simple

common common-options
  build-depends:
    base,
    ws,

  default-language: GHC2024
  default-extensions:
    BlockArguments
    DeriveAnyClass
    DerivingStrategies
    DuplicateRecordFields
    ImplicitParams
    MagicHash
    OverloadedRecordDot
    OverloadedStrings
    RecordWildCards

library
  import:
    common-options

  -- cabal-gild: discover src
  exposed-modules:
    Reacthome.Relay
    Reacthome.Relay.App
    Reacthome.Relay.Client
    Reacthome.Relay.Dispatcher
    Reacthome.Relay.Error
    Reacthome.Relay.Message
    Reacthome.Relay.Server
    Reacthome.Relay.Stat

  build-depends:
    async,
    bytestring,
    clock,
    text,
    time,
    unagi-chan,
    unordered-containers,
    uuid,

  hs-source-dirs: src

executable reacthome-relay
  import:
    common-options

  build-depends:
    reacthome-relay

  hs-source-dirs: app
  main-is: Main.hs
