cabal-version: 3.8
name: rest
version: 0.1.0.0
synopsis: Web micro framework
description: A collection of web utilities above WAI
license: BSD-3-Clause
author: ReactHome Team
maintainer: gazdovsky@gmail.com
category: Web
build-type: Simple

library
  hs-source-dirs: src
  -- cabal-gild: discover src
  exposed-modules:
    Rest
    Rest.ContentType
    Rest.Media
    Rest.Method
    Rest.Status

  build-depends:
    aeson,
    base,
    bytestring,
    case-insensitive,
    cookie,
    http-types,
    lucid2,
    text,
    transformers,
    util,
    wai,
    wai-extra,

  default-language: GHC2024
  default-extensions:
    BlockArguments
    ImplicitParams
    OverloadedRecordDot
    OverloadedStrings
    RecordWildCards
