cabal-version: 3.8
name: util
version: 0.1.0.0
synopsis: Common Utilities
description: A collection of common utilities for Reacthome daemons galaxy
license: BSD-3-Clause
author: ReactHome Team
maintainer: gazdovsky@gmail.com
category: Web
build-type: Simple

library
  hs-source-dirs: src
  -- cabal-gild: discover src
  exposed-modules:
    Util.ASN1
    Util.Aeson
    Util.Base64
    Util.Base64.Lazy
    Util.Base64.URL
    Util.Base64.URL.Lazy
    Util.Channel
    Util.MVar
    Util.SQLite
    Util.Timer

  build-depends:
    aeson,
    asn1-encoding,
    base,
    base64-bytestring,
    bytestring,
    resource-pool,
    sqlite-simple,
    stm,
    text,

  default-language: GHC2024
  default-extensions:
    BlockArguments
    OverloadedStrings
    RecordWildCards
