cabal-version: 3.8
name: ws
version: 0.1.0.0
synopsis: A WebSockets framework with auto batching
description: A Micro WebSockets framework
license: BSD-3-Clause
author: ReactHome Team
maintainer: gazdovsky@gmail.com
category: Web
build-type: Simple

library
  hs-source-dirs: src
  -- cabal-gild: discover src
  exposed-modules:
    WebSockets.Client
    WebSockets.Connection
    WebSockets.Error
    WebSockets.Options
    WebSockets.PendingConnection
    WebSockets.Server

  build-depends:
    async,
    base,
    bytestring,
    case-insensitive,
    random,
    text,
    vector,
    websockets,

  default-language: GHC2024
  default-extensions:
    BlockArguments
    ImplicitParams
    OverloadedRecordDot
    OverloadedStrings
    RecordWildCards
